main/gen2/JeleniepParser.py
# Generated from Jeleniep.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class JeleniepParser ( Parser ):

    grammarFileName = "Jeleniep.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'='", "<INVALID>", "<INVALID>", 
                     "'+'", "'*'", "'/'", "'-'", "'write'", "'read'", "'int'", 
                     "'float'", "','", "'string'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "OPERATOR_STRONG", "OPERATOR_WEAK", "ADD", "MULT", 
                      "DIVIDE", "MINUS", "WRITE", "READ", "INT", "DOUBLE", 
                      "COMMA", "STRING", "STRING_VALUE", "ID", "INT_VALUE", 
                      "DOUBLE_VALUE", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_declare = 3
    RULE_var_type = 4
    RULE_expr = 5
    RULE_value = 6
    RULE_numeric_value = 7
    RULE_paramdefs = 8

    ruleNames =  [ "prog", "block", "stat", "declare", "var_type", "expr", 
                   "value", "numeric_value", "paramdefs" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    OPERATOR_STRONG=4
    OPERATOR_WEAK=5
    ADD=6
    MULT=7
    DIVIDE=8
    MINUS=9
    WRITE=10
    READ=11
    INT=12
    DOUBLE=13
    COMMA=14
    STRING=15
    STRING_VALUE=16
    ID=17
    INT_VALUE=18
    DOUBLE_VALUE=19
    NEWLINE=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(JeleniepParser.BlockContext,0)


        def getRuleIndex(self):
            return JeleniepParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = JeleniepParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JeleniepParser.StatContext)
            else:
                return self.getTypedRuleContext(JeleniepParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(JeleniepParser.NEWLINE)
            else:
                return self.getToken(JeleniepParser.NEWLINE, i)

        def getRuleIndex(self):
            return JeleniepParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = JeleniepParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JeleniepParser.WRITE) | (1 << JeleniepParser.READ) | (1 << JeleniepParser.INT) | (1 << JeleniepParser.DOUBLE) | (1 << JeleniepParser.STRING) | (1 << JeleniepParser.ID))) != 0):
                self.state = 20
                self.stat()
                self.state = 21
                self.match(JeleniepParser.NEWLINE)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JeleniepParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JeleniepParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(JeleniepParser.READ, 0)
        def paramdefs(self):
            return self.getTypedRuleContext(JeleniepParser.ParamdefsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)


    class DeclareVariableContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JeleniepParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declare(self):
            return self.getTypedRuleContext(JeleniepParser.DeclareContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclareVariable" ):
                listener.enterDeclareVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclareVariable" ):
                listener.exitDeclareVariable(self)


    class WriteContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JeleniepParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(JeleniepParser.WRITE, 0)
        def paramdefs(self):
            return self.getTypedRuleContext(JeleniepParser.ParamdefsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JeleniepParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JeleniepParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(JeleniepParser.ExprContext,0)

        def value(self):
            return self.getTypedRuleContext(JeleniepParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def stat(self):

        localctx = JeleniepParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JeleniepParser.WRITE]:
                localctx = JeleniepParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(JeleniepParser.WRITE)
                self.state = 29
                self.match(JeleniepParser.T__0)
                self.state = 30
                self.paramdefs()
                self.state = 31
                self.match(JeleniepParser.T__1)
                pass
            elif token in [JeleniepParser.ID]:
                localctx = JeleniepParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.match(JeleniepParser.ID)
                self.state = 34
                self.match(JeleniepParser.T__2)
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 35
                    self.expr(0)
                    pass

                elif la_ == 2:
                    self.state = 36
                    self.value()
                    pass


                pass
            elif token in [JeleniepParser.READ]:
                localctx = JeleniepParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.match(JeleniepParser.READ)
                self.state = 40
                self.match(JeleniepParser.T__0)
                self.state = 41
                self.paramdefs()
                self.state = 42
                self.match(JeleniepParser.T__1)
                pass
            elif token in [JeleniepParser.INT, JeleniepParser.DOUBLE, JeleniepParser.STRING]:
                localctx = JeleniepParser.DeclareVariableContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(JeleniepParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(JeleniepParser.ID, 0)

        def getRuleIndex(self):
            return JeleniepParser.RULE_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare" ):
                listener.enterDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare" ):
                listener.exitDeclare(self)




    def declare(self):

        localctx = JeleniepParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.var_type()
            self.state = 48
            self.match(JeleniepParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(JeleniepParser.INT, 0)

        def DOUBLE(self):
            return self.getToken(JeleniepParser.DOUBLE, 0)

        def STRING(self):
            return self.getToken(JeleniepParser.STRING, 0)

        def getRuleIndex(self):
            return JeleniepParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = JeleniepParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JeleniepParser.INT) | (1 << JeleniepParser.DOUBLE) | (1 << JeleniepParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(JeleniepParser.ValueContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JeleniepParser.ExprContext)
            else:
                return self.getTypedRuleContext(JeleniepParser.ExprContext,i)


        def OPERATOR_STRONG(self):
            return self.getToken(JeleniepParser.OPERATOR_STRONG, 0)

        def OPERATOR_WEAK(self):
            return self.getToken(JeleniepParser.OPERATOR_WEAK, 0)

        def getRuleIndex(self):
            return JeleniepParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JeleniepParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JeleniepParser.STRING_VALUE, JeleniepParser.ID, JeleniepParser.INT_VALUE, JeleniepParser.DOUBLE_VALUE]:
                self.state = 53
                self.value()
                pass
            elif token in [JeleniepParser.T__0]:
                self.state = 54
                self.match(JeleniepParser.T__0)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(JeleniepParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 66
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = JeleniepParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 60
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 61
                        self.match(JeleniepParser.OPERATOR_STRONG)
                        self.state = 62
                        self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = JeleniepParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 63
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 64
                        self.match(JeleniepParser.OPERATOR_WEAK)
                        self.state = 65
                        self.expr(3)
                        pass

             
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JeleniepParser.ID, 0)

        def INT_VALUE(self):
            return self.getToken(JeleniepParser.INT_VALUE, 0)

        def DOUBLE_VALUE(self):
            return self.getToken(JeleniepParser.DOUBLE_VALUE, 0)

        def STRING_VALUE(self):
            return self.getToken(JeleniepParser.STRING_VALUE, 0)

        def getRuleIndex(self):
            return JeleniepParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = JeleniepParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JeleniepParser.STRING_VALUE) | (1 << JeleniepParser.ID) | (1 << JeleniepParser.INT_VALUE) | (1 << JeleniepParser.DOUBLE_VALUE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Numeric_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_VALUE(self):
            return self.getToken(JeleniepParser.INT_VALUE, 0)

        def DOUBLE_VALUE(self):
            return self.getToken(JeleniepParser.DOUBLE_VALUE, 0)

        def getRuleIndex(self):
            return JeleniepParser.RULE_numeric_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumeric_value" ):
                listener.enterNumeric_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumeric_value" ):
                listener.exitNumeric_value(self)




    def numeric_value(self):

        localctx = JeleniepParser.Numeric_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_numeric_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not(_la==JeleniepParser.INT_VALUE or _la==JeleniepParser.DOUBLE_VALUE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdefsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JeleniepParser.ValueContext)
            else:
                return self.getTypedRuleContext(JeleniepParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JeleniepParser.COMMA)
            else:
                return self.getToken(JeleniepParser.COMMA, i)

        def getRuleIndex(self):
            return JeleniepParser.RULE_paramdefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamdefs" ):
                listener.enterParamdefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamdefs" ):
                listener.exitParamdefs(self)




    def paramdefs(self):

        localctx = JeleniepParser.ParamdefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramdefs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 75
                    self.value()
                    self.state = 76
                    self.match(JeleniepParser.COMMA) 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 83
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




